Finished implementing the Coffee class

--- a/CoffeeShop/CoffeeShop.csproj
+++ b/CoffeeShop/CoffeeShop.csproj
@@ -40,7 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cashier.cs" />
     <Compile Include="Coffee.cs" />
+    <Compile Include="Menu.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
